--- a/package.json
+++ b/package.json
@@ -1,28 +1,21 @@
 {
-  "name": "nextra-docs-template",
+  "name": "pandorra-ai-user-docs",
   "version": "0.0.1",
-  "description": "Nextra docs template",
+  "description": "Pandorra user docs",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/shuding/nextra-docs-template.git"
-  },
-  "author": "Shu Ding <g@shud.in>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/shuding/nextra-docs-template/issues"
-  },
-  "homepage": "https://github.com/shuding/nextra-docs-template#readme",
   "dependencies": {
+    "autoprefixer": "^10.4.20",
     "next": "^13.0.6",
     "nextra": "latest",
     "nextra-theme-docs": "latest",
+    "postcss": "^8.4.45",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.4.11"
   },
   "devDependencies": {
     "@types/node": "18.11.10",
